# flutter_rust_bridge

./: justfile
.github/workflows/: ci.yaml
book/src/feature/: lang_methods.md
frb_codegen/: Cargo.toml
frb_codegen/src/: lib.rs  main.rs  source_graph.rs  utils.rs
frb_codegen/src/config/: opts_parser.rs
frb_codegen/src/generator/dart/: mod.rs  ty.rs  ty_impl_trait.rs  ty_rust_opaque.rs  ty_struct.rs
frb_codegen/src/generator/rust/: mod.rs  ty.rs  ty_impl_trait.rs
frb_codegen/src/ir/: file.rs  mod.rs  ty.rs  ty_impl.rs  ty_type_impl_trait.rs
frb_codegen/src/parser/: mod.rs  ty.rs
frb_codegen/src/utils/: parse_sig_from_lib.rs  run_template.rs
frb_codegen/tests/: README.md  get_configs.rs
frb_codegen/tests/snapshots/: derive_struct.ast  get_configs____Users__huangzheng__rusts__flutter_rust_bridge__frb_codegen__..__frb_example__pure_dart__rust__Cargo.toml.snap  get_configs__get_ir.snap  get_configs__get_ir.snap.new  get_configs__get_irx.snap  get_configs__get_raw_ir.snap  impl_ast.ast
frb_example/pure_dart/dart/lib/: bridge_generated.io.dart
frb_example/pure_dart/rust/: Cargo.toml  build.rs
frb_example/pure_dart/rust/src/: api.rs  bridge_generated.rs  bridge_generated_bound.rs  lib.rs
frb_example/with_flutter/lib/: bridge_definitions.dart  bridge_generated.dart  bridge_generated.io.dart  bridge_generated.web.dart
frb_example/with_flutter/rust/: .flutter_rust_bridge.yml
frb_example/with_flutter/rust/c_output_path_extra/: c_output.h
frb_example/with_flutter/rust/flutter_rust_bridge_example.xcodeproj/: project.pbxproj
(+4 files in other folders)
