[package]
edition.workspace = true
name = "flutter_rust_bridge_example_single_block_test"
version = "1.0.0"

[lib]
crate-type = ["cdylib"]
name = "flutter_rust_bridge_example"

[build-dependencies]
flutter_rust_bridge_codegen = {workspace = true, features = [
  "chrono",
  "uuid",
]}

[dependencies]
anyhow = {workspace = true, features = ["backtrace"]}
chrono = {workspace = true}
flutter_rust_bridge = {workspace = true, features = ["chrono", "uuid"]}
lazy_static = {workspace = true}
uuid = {workspace = true}
# wasm_thread = "0.2.0"

[dependencies.external-lib] # used for demo of external types mirroring
package = "flutter_rust_bridge_example_external"
path = "./external"
